--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.22.2",
+    "socket.io-client": "^2.1.1",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-router": "^3.0.1",
+    "websocket": "^1.0.26"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
